--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
 </head>
 
 <body>
-    <h1>hello world</h1>
-    <p>git check</p>
+    <header class="header container">
+        <section class="banner-heading">
+            <div class="h3">
+                <h3>Happy New Year</h3>
+            </div>
+            <div class="h1">
+                New Year Party Celebration
+            </div>
+        </section>
+
+    </header>
 
 </body>
 
