banner bg added

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
     <header class="header container">
-        <section class="banner-heading">
+        <div class="banner-heading">
             <div class="h3">
                 <h3>Happy New Year</h3>
             </div>
             <div class="h1">
                 New Year Party Celebration
             </div>
-        </section>
+        </div>
 
     </header>
 
