offer section added

--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
                 New Year Party Celebration
             </div>
         </div>
-
     </header>
+    <section class="offer">
+        <div class="offer-text">
+            <div class="offer-text-01">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            </div class>
+            <div>
+                <h1 class="offer-text-02">ALL CATAGORIES</h1>
+            </div>
+        </div>
+        <div class="offer-img">
+            <img src="resources/New Year Photo.png" alt="">
+        </div>
+
+    </section>
 
 </body>
 
