welcome section work in progress

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
         </div>
 
     </section>
+    <section class="welcome container">
+        <div class="welcome-text">
+            <h1>welcome to midnight party</h1>
+            <p>
+                Welcome to New Year party 2024.
+                It's party time. Feel free to join us. Enjoy your moment and express yourself.
+            </p>
+            <div class="welcome-button">
+                <button>JOIN NOW</button>
+            </div>
+        </div>
+
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section>
+        <h1>hello word</h1>
+    </section>
 
 </body>
 
