party detail section complited

--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
         </div>
 
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <section>
-        <h1>hello word</h1>
+    <section class="party-detail container">
+        <h1><span>Place:</span> New Park Hotel</h1>
+        <h1><span>Date:</span> 31 December Night 2023</h1>
+        <h1><span>Time:</span> Evening 7.30pm To 13.3pm</h1>
+        <button class="party-detail-button">JOIN NOW</button>
     </section>
+    <section class="announcement container">
+        <h1>hello</h1>
+    </section>
+
 
 </body>
 
