announcement section work in progress

--- a/index.html
+++ b/index.html
@@ -63,8 +63,25 @@
         <button class="party-detail-button">JOIN NOW</button>
     </section>
     <section class="announcement container">
+        <div class="announcement-offer">
+            <h3>NEW BEST OFFER</h3>
+            <h1>Coming Soon</h1>
+            <p>We are offering flat 40% discount on every item. Offer start from 31st Decmer.You will get what you want.
+            </p>
+        </div>
+        <div class="announcement-img">
+            <img src="resources/Ellipse 1.png" alt="">
+        </div>
+        <div class="announcement-grtings">
+            <h1>2024</h1>
+            <p>Happy new year 2024 to everyone. Come to our places and pick your most desire item.</p>
+            <img src="resources/Group 96.png" alt="">
+        </div>
+    </section>
+    <section class="test container">
         <h1>hello</h1>
     </section>
+
 
 
 </body>
