portfolio section complited

--- a/index.html
+++ b/index.html
@@ -78,8 +78,22 @@
             <img src="resources/Group 96.png" alt="">
         </div>
     </section>
-    <section class="test container">
-        <h1>hello</h1>
+    <section class="portfolio container">
+        <div class="portfolio-text">
+            <h3>THE BEST GIFTS</h3>
+            <h1>OUR Awesome Portfolio</h1>
+            <p>We offer your day to day life essentials of every aspect of your life. We try our best to provide best of
+                best to your need.
+            </p>
+            <div class="portfolio-img">
+                <div><img src="resources/Rectangle 3.png" alt=""></div>
+                <div><img src="resources/Rectangle 4.png" alt=""></div>
+                <div><img src="resources/Rectangle 5.png" alt=""></div>
+                <div><img src="resources/Rectangle 6.png" alt=""></div>
+                <div><img src="resources/Rectangle 7.png" alt=""></div>
+                <div><img src="resources/Rectangle 8.png" alt=""></div>
+            </div>
+        </div>
     </section>
 
 
