nesletter section works in progress

--- a/index.html
+++ b/index.html
@@ -95,6 +95,29 @@
             </div>
         </div>
     </section>
+    <section class="newsletter container">
+        <div class="newsletter-icon">
+            <img src="resources/Group 61.png" alt="">
+        </div>
+        <div class="newsletter-text">
+            <h1>Subscribe newsletter</h1>
+            <p>To have our day to day offers and many more subscribe to our newsletter.</p>
+
+        </div>
+        <div class="newsletter-subscribe">
+            <input type="email" placeholder="user@gmail.com">
+            <button>Subscribe</button>
+        </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section>
+
+    </section>
 
 
 
