--- a/index.html
+++ b/index.html
@@ -109,17 +109,12 @@
             <button>Subscribe</button>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <section>
+    <footer class="container">
+        <div class="footer-text">
 
-    </section>
+        </div>
 
-
+    </footer>
 
 </body>
 
