footer section added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Merriweather:wght@400;700;900&display=swap"
         rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> -->
 </head>
 
 <body>
@@ -109,9 +110,27 @@
             <button>Subscribe</button>
         </div>
     </section>
-    <footer class="container">
+    <footer class=" footer">
         <div class="footer-text">
-
+            <div class="address">
+                <address>
+                    44, Big Building Roosevelt Street <br>Beach Gardens, Florida-33410
+                </address>
+            </div>
+            <div class="contact">
+                <p> <i class="fa-solid fa-phone"></i> +00 123 584 124</p>
+                <p><i class="fa-solid fa-globe"></i> www.website.com</p>
+            </div>
+        </div>
+        <div class="social-contact">
+            <div><img src="resources/Facebook.png" alt=""></div>
+            <div><img src="resources/Twitter.png" alt=""></div>
+            <div><img src="resources/Instagram.png" alt=""></div>
+            <div><img src="resources/Linkedin.png" alt=""></div>
+        </div>
+        <div class="copywrite-footer">
+            <p>2017,<small>All Rights Reserved</small></p>
+            <button>Unsubscribe</button>
         </div>
 
     </footer>
