hoilidays section work in progress

--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
             <img src="resources/Group 96.png" alt="">
         </div>
     </section>
+    <section class="holidaysSale container">
+        <div class="holidaysSale-text">
+            <h3>WHAT IS FUNCTIONAL</h3>
+            <h1><span>Holidays</span> Sale 50%</h1>
+            <p>Offer spacial day on 31st december. On this big occasion we are giving flat 50% discount on only drinks
+                and beverage items. It's high time to grab your deal. Let's celebrate this very new year with upper most
+                joy. Once again happy new year all.</p>
+        </div>
+        <div class="holidaysSale-images">
+            <div class="top">
+                <div class="top-01"><img src="resources/Group 75.png" alt=""></div>
+                <div class="top-02"><img src="resources/Group 44.png" alt=""></div>
+                <div class="top-03"><img src="resources/Rectangle 1.png" alt=""></div>
+            </div>
+            <div class="base"><img src="resources/Rectangle 2.png" alt=""></div>
+        </div>
+
+    </section>
     <section class="portfolio container">
         <div class="portfolio-text">
             <h3>THE BEST GIFTS</h3>
