party details section fainalaised

--- a/index.html
+++ b/index.html
@@ -31,13 +31,9 @@
     </header>
     <section class="offer">
         <div class="offer-text">
-            <div class="offer-text-01">
-                <h1>65% OFF</h1>
-                <p>OUR HOLIDAY DEALS ARE BETTER</p>
-            </div class>
-            <div>
-                <h1 class="offer-text-02">ALL CATAGORIES</h1>
-            </div>
+            <h1 class="heading1">65% OFF</h1>
+            <p class="para1">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="heading2">ALL CATAGORIES</h2>
         </div>
         <div class="offer-img">
             <img src="resources/New Year Photo.png" alt="">
@@ -58,10 +54,12 @@
 
     </section>
     <section class="party-detail container">
-        <h1><span>Place:</span> New Park Hotel</h1>
-        <h1><span>Date:</span> 31 December Night 2023</h1>
-        <h1><span>Time:</span> Evening 7.30pm To 13.3pm</h1>
-        <button class="party-detail-button">JOIN NOW</button>
+        <div class="party-detail-text">
+            <h1><span>Place:</span> New Park Hotel</h1>
+            <h1><span>Date:</span> 31 December Night 2023</h1>
+            <h1><span>Time:</span> Evening 7.30pm To 11.30pm</h1>
+            <button class="party-detail-button">JOIN NOW</button>
+        </div>
     </section>
     <section class="announcement container">
         <div class="announcement-offer">
